# hog_dog

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  dogs.txt  hotdog.db
src/: backend.rs  lib.rs  main.rs
src/components/: favorites.rs  mod.rs  nav.rs  not_found.rs  view.rs
