[package]
name = "hog_dog"
version = "0.1.0"
authors = ["Dmitry Sibiryakov <sibiriakoff2006@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base64 = "0.22.1"
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
# image = "0.25.6"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.37.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
web-sys = "0.3.77"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
